--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "^11.3.24",
+		"gsap": "^3.12.5",
 		"intl-messageformat": "^10.5.0",
 		"lucide-react": "^0.412.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-icons": "^5.2.1",
+		"react-loading-skeleton": "^3.4.0",
+		"swiper": "^11.1.8"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
