--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nextui-org/theme": "2.2.9",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@types/react-typing-effect": "^2.0.7",
     "axios": "^1.7.3",
     "clsx": "2.1.1",
     "framer-motion": "^11.3.24",
@@ -36,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-typing-effect": "^2.0.5",
     "swiper": "^11.1.8"
   },
   "devDependencies": {
