--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "editor.fontFamily": "Fira Code Light",
-  "editor.fontSize": 14
+  "editor.fontFamily": "Fira Code Regular",
+  "editor.fontSize": 13
 }
