--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.3.24",
     "gsap": "^3.12.5",
     "intl-messageformat": "^10.5.0",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.412.0",
     "next": "14.2.4",
     "next-themes": "^0.2.1",
@@ -41,6 +42,7 @@
     "swiper": "^11.1.8"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
