--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nextui-org/theme": "2.2.9",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@types/pg": "^8.11.9",
     "@types/react-typing-effect": "^2.0.7",
+    "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.3",
     "clsx": "2.1.1",
     "framer-motion": "^11.3.24",
